--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <title>Notes-a-lot</title>
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='style.css') }}"
+      href="{{ url_for('static', filename='main.css') }}"
     />
     <meta charset="UTF-8" />
   </head>
@@ -19,6 +19,8 @@
         <button type="submit">Create</button>
       </form>
     </header>
-    <main>{{ dane | safe }}</main>
+    <main>
+        {{dane | safe}}
+        </main>
   </body>
 </html>
